# zoupw-lingxing-v2

./: .env.example  .gitignore  alembic.ini  dashboard.html  pyproject.toml  方案-领星数据接入与AI看板.md  附件1-领星OpenAPI调研.md
alembic/: env.py
alembic/versions/: 68955653ba40_init_tables.py  6dff79f27499_add_ods_product_list.py  a1b2c3d4e5f6_add_order_item_unique_constraint.py  b2c3d4e5f6a7_add_dim_shop_marketplace_fields.py  c3d4e5f6a7b8_add_ods_product_list_sync_time.py  d4e5f6a7b8c9_add_dwd_order_item_detail.py  ef3538a8c880_add_slow_moving_tables.py
deploy/systemd/: README.md  lingxing-erp.service  lingxing-erp.target  lingxing-erp.timer  lingxing-scheduler.service
docs/: slow-moving-mvp.md  采购及物流流程.md
lingxing-api-docs/: README.md  _navbar.md  _sidebar.md  all_docs.txt  index.html
lingxing-api-docs/docs/: ApiUpdateLog.md
lingxing-api-docs/docs/Authorization/: GetToken.md  RefreshToken.md
lingxing-api-docs/docs/BasicData/: AccoutLists.md  AllMarketplace.md  AttachmentDownload.md  ConceptSellerLists.md  Currency.md  CustomAttachmentDownload.md  ExchangeRateUpdate.md  SellerBatchRename.md  SellerLists.md  StateList.md  WorldStateLists.md
scripts/: dev_env.sh  dev_start.sh  dev_stop.sh  encrypt_env.py  generate_static_dashboard.py  import_owners.py  init_bitable.py  insert_test_data.py  refresh_dashboard.py  smoke_e2e.py  smoke_slow_moving.py  test_api.py  test_feishu_report.py
src/lingxing/: __init__.py  bi_static.py  exceptions.py
tests/: test_dashboard_app.py  test_secrets.py  test_slow_moving.py  test_stage_b_smoke.py  test_static_dashboard.py
(+642 files in other folders)
