[tool.poetry]
name = "lingxing-erp"
version = "0.1.0"
description = "领星 ERP 数据接入与 AI 智能看板"
authors = ["Tech Team"]
readme = "README.md"
packages = [{include = "lingxing", from = "src"}]

[tool.poetry.scripts]
lingxing-sync = "lingxing.scheduler.jobs:main"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.7"
pydantic-settings = "^2.3"
sqlalchemy = "^2.0"
alembic = "^1.13"
asyncpg = ">=0.30,<0.31"
psycopg2-binary = "^2.9"
redis = "^5.0"
httpx = "^0.27"
pycryptodome = "^3.20"
apscheduler = "^3.10"
pyyaml = "^6.0"
jinja2 = "^3.1"
lark-oapi = "^1.6.7"
fastapi = "^0.136.3"
uvicorn = "^0.48.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-asyncio = "^0.23"
pytest-cov = "^5.0"
ruff = "^0.4"
ipython = "^8.24"







[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
asyncio_mode = "auto"
